(fix) Layout of settings dialog on mobile

--- a/src/app/core/components/settings/settings.component.scss
+++ b/src/app/core/components/settings/settings.component.scss
@@ -1,8 +1,11 @@
-.mat-dialog-content {
-  min-width: 39vh;
+::ng-deep .mat-dialog-content {
   min-height: 9vh;
 
   .mat-checkbox {
     display: block;
+
+    .mat-checkbox-layout {
+      white-space: break-spaces;
+    }
   }
 }
